= Changelog

== 4.0.0 - upcoming

* Migrated some documentation from the old Google Code site
** contributed by Manfred Moser http://www.simpligility.com
* Fix for aar and jar dependency mix and related resolving
** see https://github.com/simpligility/android-maven-plugin/pull/493
** fixes https://github.com/simpligility/android-maven-plugin/issues/485
** contributed by Hoyt Summers Pittman https://github.com/secondsun
* Fixes to proguard and multidex related processing
** see https://github.com/simpligility/android-maven-plugin/pull/509
** fixes https://github.com/simpligility/android-maven-plugin/issues/507
** contributed by Łukasz Suski https://github.com/lsuski
* Documentation for shading commons-codec to allow usage of newer version
** see https://github.com/simpligility/android-maven-plugin/pull/498
** see https://github.com/simpligility/android-maven-plugin/issues/487#issuecomment-60956025
** contributed by Matthias Stevens https://github.com/mstevens83
* Custom exclude filter to ProGuardMojo
** see https://github.com/simpligility/android-maven-plugin/pull/497
** Contributed by Csaba Kozák https://github.com/WonderCsabo
* Fixes to resource files in sample projects to allow builds to pass with new SDK
** see https://github.com/simpligility/android-maven-plugin/pull/514
** contributed by Manfred Moser http://www.simpligility.com

== 4.0.0-rc.3 - released 2014-10-28

* Migrated complete project to new git repo at https://github.com/simpligility/android-maven-plugin
** contributed by Manfred Moser http://www.simpligility.com
* Adapted codebase to new groupId "com.simpligility.maven.plugins
** contributed by Manfred Moser http://www.simpligility.com

== 4.0.0-rc.2 and older release notes

can be found on the old project site on the https://code.google.com/p/maven-android-plugin/wiki/Changelog[changelog wiki page]. 