@@ -22,6 +22,13 @@
 * Fixes to resource files in sample projects to allow builds to pass with new SDK
 ** see https://github.com/simpligility/android-maven-plugin/pull/514
 ** contributed by Manfred Moser http://www.simpligility.com
+* Always honor dexArguments parameters
+** fixes https://github.com/simpligility/android-maven-plugin/issues/517
+** contributed by Manfred Moser http://www.simpligility.com
+* Downgraded runtime requirements to Maven 3.0.4
+** contributed by Manfred Moser http://www.simpligility.com
+* Examples documentation
+** contributed by Manfred Moser http://www.simpligility.com
 
 == 4.0.0-rc.3 - released 2014-10-28
 
